# ckanext-htmx-demo

./: MANIFEST.in  README.md  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/htmx/: blueprint.py  helpers.py  plugin.py
ckanext/htmx/assets/: htmx-csrf.js  script.js  webassets.yml
ckanext/htmx/templates/: page.html
ckanext/htmx/templates/package/: htmx_index.html  htmx_search.html  search.html
ckanext/htmx/templates/snippets/: htmx_facet_list.html
ckanext/htmx/tests/: test_plugin.py
