[metadata]
name = ckanext-htmx
version = 0.0.1
description = An extension to add HTMX frontend to CKAN
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pdelboca/ckanext-htmx
author = Patricio Del Boca
author_email = 
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN HTMX hypermedia

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             htmx = ckanext.htmx.plugin:HtmxPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/htmx/i18n/ckanext-htmx.pot
width = 80

[init_catalog]
domain = ckanext-htmx
input_file = ckanext/htmx/i18n/ckanext-htmx.pot
output_dir = ckanext/htmx/i18n

[update_catalog]
domain = ckanext-htmx
input_file = ckanext/htmx/i18n/ckanext-htmx.pot
output_dir = ckanext/htmx/i18n
previous = true

[compile_catalog]
domain = ckanext-htmx
directory = ckanext/htmx/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
